<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fond">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adaptation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adaptaion"
            android:textColor="@color/jaune"
            android:textSize="30dp"
            app:layout_constraintLeft_toRightOf="@id/iden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/singeton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singleton"
            android:textColor="@color/jaune"
            android:textSize="30dp"
            app:layout_constraintLeft_toRightOf="@id/iden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adaptation" />

        <TextView
        android:id="@+id/fragement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragement"
        android:textColor="@color/jaune"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/singeton"
            app:layout_constraintLeft_toRightOf="@id/iden"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/obser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observable"
        android:textColor="@color/jaune"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/fragement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button"
        android:background="@color/white"
        android:entries="@array/maliste"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butontext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>